fix overflowing on dashboard table

--- a/web-app/less/dashboard.less
+++ b/web-app/less/dashboard.less
@@ -78,6 +78,7 @@ th
 	padding-left: 0px;
 	padding-right: 0px;
 	height: 200px;
+	overflow-y: auto;
 	}
 /*Recent Recalls*/
 .pushH3right
